syntax = "proto3";
package core.stable.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "core/stable/v1beta1/pair.proto";
import "core/stable/v1beta1/params.proto";
import "cosmos/bank/v1beta1/bank.proto";
option go_package = "github.com/QuadrateOrg/core/x/stable/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/core/stable/v1beta1/params";
  }
  rpc PairByPairId(PairByPairIdRequest) returns (PairRequestResponse) {
    option (google.api.http).get = "/core/stable/v1beta1/pair/{pairId}";
  }
  rpc PairById(PairByIdRequest) returns (PairRequestResponse) {
    option (google.api.http).get = "/core/stable/v1beta1/pair/{id}";
  }
  rpc GetAmountOutByAmountIn(GetAmountOutByAmountInRequest) returns (GetAmountOutByAmountInResponse) {
    option (google.api.http).get = "/core/stable/v1beta1/getAmountOutByAmountIn/{pairId}/{amountIn}/{action}";
  }
  rpc AllPairs(AllPairsRequest) returns (AllPairsResponse) {
    option (google.api.http).get = "/core/stable/v1beta1/pairs";
  }
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1;
}

message PairByPairIdRequest {
  string pairId = 1;
}

message PairByIdRequest {
  uint64 id = 1;
}

message GetAmountOutByAmountInRequest {
  string pairId = 1;
  uint64 amountIn = 2;
  string action = 3;
}

message GetAmountOutByAmountInResponse {
  string pairId = 1;
  uint64 amountOut = 2;
  string action = 3;
}

message PairRequestResponse {
  string pairId = 1;
  cosmos.bank.v1beta1.Metadata amountInMetadata = 2 [ (gogoproto.moretags) = "yaml:\"amountInMetadata\"", (gogoproto.nullable)   = false ];
  cosmos.bank.v1beta1.Metadata amountOutMetadata = 3 [ (gogoproto.moretags) = "yaml:\"amountOutMetadata\"", (gogoproto.nullable)   = false ];
  string model = 4;
  string qm = 5 [
          (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
          (gogoproto.moretags) = "yaml:\"qm\"",
          (gogoproto.nullable) = false
  ];
  string ar = 6 [
          (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
          (gogoproto.moretags) = "yaml:\"ar\"",
          (gogoproto.nullable) = false
  ];
  string minAmountIn = 7;
  string minAmountOut = 8;
  uint64 backing_ratio = 9;
  uint64 minting_fee = 10;
  uint64 burning_fee = 11;
}

message AmountOutResponse {
  string pairId = 1;
  uint64 amountOut = 2;
  string denom = 3;
}

message AllPairsRequest {}

message AllPairsResponse {
  repeated Pair pairs = 1;
}